--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,14 @@
     <aside class="aside">
       <h1>Notarikon</h1>
       <div class="aside__btns"></div>
+      <div class="difficulty-wrapper">
+        <span>Difficulty:</span>
+        <a href="?difficulty=1" data-difficulty="1" class="difficulty__link"></a>
+        <a href="?difficulty=2" data-difficulty="2" class="difficulty__link"></a>
+        <a href="?difficulty=3" data-difficulty="3" class="difficulty__link"></a>
+        <a href="?difficulty=4" data-difficulty="4" class="difficulty__link"></a>
+        <a href="?difficulty=5" data-difficulty="5" class="difficulty__link"></a>
+      </div>
     </aside>
     <section>
       <div class="textarea" contenteditable="true" spellcheck="false"></div>
