--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>Notarikon</title>
   <link rel="stylesheet" type="text/css" href="./bundle.min.css">
+  <link rel="icon" href="favicon.png">
 </head>
 <body>
   <main class="main">
@@ -20,7 +21,7 @@
       </div>
     </aside>
     <section>
-      <div class="textarea" contenteditable="true" spellcheck="false"></div>
+      <div class="textarea" autofocus contenteditable="true" spellcheck="false"></div>
       <button class="btn--reload" onclick="location.reload()">Try again</button>
     </section>
   </main>
