--- a/app/index.tpl.html
+++ b/app/index.tpl.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Revolution</title>
-    <link rel="shortcut icon" href="favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="/assets/favicon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,700,700i|Permanent+Marker" rel="stylesheet">
 </head>
 <body>
